--- a/roles/zsh-packages/defaults/main.yml
+++ b/roles/zsh-packages/defaults/main.yml
@@ -5,7 +5,6 @@
 # lsd_config_dir: "{{ zsh_user_home }}/.config/lsd"
 # lsd_themes_dir: "{{ lsd_config_dir }}/themes"
 
-
 zsh_packages:
   - git
   - htop
@@ -19,8 +18,8 @@ zsh_packages:
 
 zsh_packages_overrides:
   fd-find: fd
-  
-kubecolor_version: "0.5.1"
+
+kubecolor_version: '0.5.1'
 
 shell_aliases:
   lsd:
@@ -29,7 +28,7 @@ shell_aliases:
   batcat:
     - "alias cat='batcat --paging=never'"
   fd-find:
-    - "alias find='fdfind'"
+    - "alias fd='fdfind'"
 
 shell_exports:
   nano:
@@ -41,7 +40,6 @@ shell_exports:
     - "FZF_DEFAULT_COMMAND='fdfind --type f'"
     - "FZF_DEFAULT_OPTS='--height=40% --layout=reverse --border'"
     - "FZF_CTRL_T_COMMAND='$FZF_DEFAULT_COMMAND'"
-
 # bash_aliases:
 
 # alias ls='lsd --long --group-dirs first --icon always'
@@ -49,8 +47,6 @@ shell_exports:
 
 # alias cat='batcat --paging=never'
 # alias find='fdfind'
-
-
 
 # nerd_font_url: >
 #       https://github.com/ryanoasis/nerd-fonts/releases/download/v3.0.2/Hack.zip
