--- a/roles/zsh-packages/tasks/fd.yml
+++ b/roles/zsh-packages/tasks/fd.yml
@@ -1,10 +1,10 @@
 ---
 - name: Install fd-find and symlink it to `fd`
   hosts: all
-  become: true      # for apt
+  become: true # for apt
   vars:
     fd_src: /usr/bin/fdfind
-    fd_link: "{{ ansible_env.HOME }}/.local/bin/fd"
+    fd_link: '{{ ansible_env.HOME }}/.local/bin/fd'
 
   tasks:
     - name: Ensure apt cache is up to date
@@ -21,15 +21,15 @@
     - name: Ensure ~/.local/bin exists
       become: false
       file:
-        path: "{{ ansible_env.HOME }}/.local/bin"
+        path: '{{ ansible_env.HOME }}/.local/bin'
         state: directory
         mode: '0755'
 
     - name: Symlink fdfind to fd if the package was installed
       become: false
       file:
-        src: "{{ fd_src }}"
-        dest: "{{ fd_link }}"
+        src: '{{ fd_src }}'
+        dest: '{{ fd_link }}'
         state: link
       when:
         - fd_install is succeeded
